# nexus-server

./: .gitignore  Cargo.toml  config.dev.toml  config.example.toml
.github/workflows/: release.yml
src/: cloud_event.rs  config.rs  github_auth.rs  lib.rs  main.rs  routing.rs  server.rs  verification.rs
src/actions/: agent.rs  claude.rs  forward.rs  http_post.rs  mod.rs  workflow.rs
src/agent/: client.rs  mod.rs  sandbox_tools.rs  tools.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/sandbox/: devcontainer.rs  docker.rs  mod.rs
src/sources/: cloudevents_source.rs  github.rs  mod.rs
src/workflows/: audit.rs  checkpoint.rs  context.rs  error.rs  executor.rs  expressions.rs  handle.rs  mod.rs  model.rs  task.rs
src/workflows/tasks/: call.rs  do_task.rs  mod.rs  set.rs  switch.rs  try_task.rs
tests/: sandbox_integration.rs
workflows/: echo-classify.yaml  try-catch-test.yaml
