[package]
name = "nexus-server"
version = "0.2.1"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dotenvy = "0.15"
ngrok = "0.18"
futures = "0.3"
jsonwebtoken = "9"
tokio-util = "0.7"
self-replace = "1"
semver = "1"
rustls = { version = "0.23", features = ["ring"], default-features = false }
cloudevents-sdk = { version = "0.9", features = ["axum", "reqwest"] }
rmcp = { version = "0.15", features = [
    "server",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
] }
serde_yaml = "0.9"
jaq-core = "1"
jaq-interpret = "1"
jaq-parse = "1"
jaq-std = "1"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.25.0"
